@@ -13,7 +13,9 @@
  ** The consequence of this is that you can now, for example, import/export a meta icon separately from the icons it is checking and they will automatically find eachother once they are all imported (as long as these export strings were created with TMW v7.0.0+)
  ** IMPORTANT: Existing DogTags that reference other icons/groups by ID cannot be updated automatically - you will need to change these yourself.
 
- * Global Cooldowns are now only filtered for icon types that can actually track things on the global cooldown.
+ * TellMeWhen_Options now maintains a backup of TellMeWhen's SavedVariables that will be restored if TellMeWhen's SVs become corrupted.
+
+ * Global Cooldowns are now only filtered for icon types that can track things on the global cooldown.
  * The Combat Event icon unit exclusion "Miscellaneous: Unknown Unit" will now also cause events that were fired without a unit to be excluded.
  * The meta icon setting "Inherit failed condition opacity" has been removed. Meta icons will now always inherit the exact opacity of the icons they are showing, though this can be overridden by the meta icon's opacity settings.
  * Complex chains of meta icon inheritance should now be handled much better, especially when some of the icons have animations on them.
@@ -32,8 +34,8 @@
  * New buff equivalency: SpeedBoosts
 
  * In the wake of the recent distribution of malicious scripts to WeakAuras users, TellMeWhen now warns you about importing executable Lua code.
- * Dramatically decreased memory usage, especially for icons that have no icon type assigned.
  * Code snippets can now be disabled from autorunning at login.
+ * Dramatically decreased memory usage, especially for icons that have no icon type assigned.
  * You can now use "thisobj" in Lua conditions as a reference to the icon or group that is checking the conditions.
  
  * Bug Fixes:
